@startuml
allowmixing

skinparam database {
    BorderColor pink
    BackgroundColor purple
    ArrowColor purple
    FontColor pink
}

skinparam rectangle {
    BorderColor purple
    BackgroundColor lightpink
    ArrowColor purple
}

skinparam class {
    BorderColor purple
    BackgroundColor pink
    ArrowColor purple
    AttributeIconSize 0
}

skinparam note {
    BorderColor darkslateblue
    BackgroundColor #90c0f0
    FontColor darkslateblue
}

component Application {
    package com.dh #d9a4ff {

        package dao {
            interface "IDao<T>"{
                + insertarNuevo(T t) : T ;
                + consultarTodos() : List<T> ;
                + consultarPorId(Integer id) : T;
                + actualizar(T t) : Boolean;
            }

            package impl {
                class "OdontologoDaoH2<Odontologo>" {
                    + insertarNuevo(Odontologo o) : Odontologo ;
                    + consultarTodos() : List<Odontologo> ;
                    + consultarPorId(Integer id) : Odontologo;
                    + actualizar(Odontologo o) : Boolean;
                }
            }

            class ConfiguracionJDBC {
                + obtenerConexionConBD() : Connection
            }

            component JDBC #ffa6df {
                interface Connection<<interface>>
                interface Sentence<<interface>>
                interface ResultSet<<interface>>
            }
        }

        package service {
            class Service {
                + darDeAltaOdontologo(String nombre, String apellido, String numeroMatricula) : String
                + consultarTodos() : String
                + buscarOdontologoPorId(Integer id) : String
                + actualizarOdontologo(Integer odontologoID, String nombre, String apellido, String numeroMatricula) : String
            }
        }

        package model {
            rectangle Odontologo
        }

        Service o-- "IDao<T>"
        "IDao<T>" <|.. "OdontologoDaoH2<Odontologo>"
        "IDao<T>" .> JDBC : usa
        "OdontologoDaoH2<Odontologo>" .> Odontologo : crea/usa
        "OdontologoDaoH2<Odontologo>" *-- ConfiguracionJDBC
    }
    rectangle "Connection Object (H2)" as connectionH2
    rectangle "Sentence Object (H2)" as sentenceH2
    rectangle "ResultSet Object (H2)" as resultsetH2


    connectionH2 ..up|> Connection
    sentenceH2 ..up|> Sentence
    resultsetH2 ..up|> ResultSet

    database H2
    note right
        Podria ser cualquier otra DB
    end note

    H2 <--up> connectionH2
    H2 <--up> sentenceH2
    H2 <--up> resultsetH2
}

@enduml